Add GET workflows API, fix DTO mapping, and configure Spring Security for Swagger