@@ -4,6 +4,9 @@ import com.workflow.backend.dto.CreateWorkflowRequest;
 import com.workflow.backend.dto.WorkflowResponse;
 import com.workflow.backend.model.Workflow;
 import com.workflow.backend.service.WorkflowService;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -21,27 +24,31 @@ public class WorkflowController {
     }
 
     @PostMapping
-    public WorkflowResponse create(@RequestBody CreateWorkflowRequest request) {
+    public ResponseEntity<WorkflowResponse> create(
+            @Valid @RequestBody CreateWorkflowRequest request) {
+
         Workflow workflow = workflowService.createWorkflow(request.getName());
-        return map(workflow);
+        return ResponseEntity.status(HttpStatus.CREATED).body(map(workflow));
     }
 
     @PostMapping("/{id}/start")
-    public WorkflowResponse start(@PathVariable UUID id) {
-        return map(workflowService.startWorkflow(id));
+    public ResponseEntity<WorkflowResponse> start(@PathVariable UUID id) {
+        return ResponseEntity.ok(map(workflowService.startWorkflow(id)));
     }
 
     @PostMapping("/{id}/complete")
-    public WorkflowResponse complete(@PathVariable UUID id) {
-        return map(workflowService.completeWorkflow(id));
+    public ResponseEntity<WorkflowResponse> complete(@PathVariable UUID id) {
+        return ResponseEntity.ok(map(workflowService.completeWorkflow(id)));
     }
 
     @GetMapping
-    public List<WorkflowResponse> getAll() {
-        return workflowService.getAllWorkflows()
-                .stream()
-                .map(this::map)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<WorkflowResponse>> getAll() {
+        return ResponseEntity.ok(
+                workflowService.getAllWorkflows()
+                        .stream()
+                        .map(this::map)
+                        .toList()
+        );
     }
 
     private WorkflowResponse map(Workflow workflow) {
